remove form bullets and fix spacing in formmail.py

--- a/styles/style.css
+++ b/styles/style.css
@@ -75,6 +75,10 @@ img#logo {
     font-size: 220%;
 }
 
+.formitems {
+  list-style: none;
+}
+
 article {
   color: #292f36;
 }
